idf_component_register(SRCS "hpg_wifi_mqtt_correction_captive_portal.c"
        INCLUDE_DIRS "."
        EMBED_TXTFILES root.crt)
message(STATUS "-----------Project Info---------")
message(STATUS " Building Example: HPG_WIFI_MQTT_CORRECTION_CAPTIVE_PORTAL")
message(STATUS "-----------Project Info End-----")